--- a/package.json
+++ b/package.json
@@ -34,18 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.4",
     "react-router-dom": "^5.0.0",
-    "video-react": "^0.13.6",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.2",
-    "react-scripts": "3.0.0",
-    "react-transition-group": "^4.0.0",
-    "reactstrap": "^8.0.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "uuid": "^3.3.2"
+    "video-react": "^0.13.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
