--- a/Client/package.json
+++ b/Client/package.json
@@ -2,13 +2,6 @@
   "name": "team1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev-build": "webpack --mode development --config webpack.dev.config.js --progress",
-    "dev-watch": "npm run dev-build -- --watch",
-    "prod": "webpack --mode production --config webpack.prod.config.js",
-    "start:dev": "webpack-dev-server"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jkeelingbu/team1.git"
@@ -19,45 +12,39 @@
     "url": "https://github.com/jkeelingbu/team1/issues"
   },
   "homepage": "https://github.com/jkeelingbu/team1#readme",
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.6.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.13.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.10.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1"
-  },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "bootstrap": "^4.3.1",
-    "lodash": "^4.17.11",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1",
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
     "react-scripts": "3.0.0",
     "react-transition-group": "^4.0.0",
     "reactstrap": "^8.0.0",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "proxy": "http://localhost:5000",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
