--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tracking-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Agile Project Management App",
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
