--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.4",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "video-react": "^0.13.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
