--- a/Client/package.json
+++ b/Client/package.json
@@ -25,6 +25,7 @@
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
